--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -40,7 +40,7 @@
 .features-carousel-container {
     position: relative;
     overflow: hidden;
-    padding: 30px 0 40px 0;
+    padding: 0px ;
     transition: all 0.3s ease;
     opacity: 1;
 }
